# pocket-tray

./: Cargo.toml  README.md  build.rs
src/: app.rs  clipboard.rs  icon.rs  main.rs  settings.rs  tray.rs  tts.rs
